--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^0.19.0",
     "sequelize": "^5.8.8",
     "mysql2": "^1.6.5",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "vue-ionicons": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
